--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,30 @@
 [versions]
-agp = "8.1.4"
+agp = "8.7.2"
 app-update = "2.1.0"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.1.1"
 hilt-compiler = "1.2.0"
 hilt-work = "1.2.0"
-kotlinx-coroutines-android = "1.8.1"
+kotlinx-coroutines-android = "1.9.0"
 kotlinx-serialization-json = "1.6.3"
 lottie-compose = "6.1.0"
-material = "1.4.3"
 kotlin = "2.0.0"
-core-ktx = "1.13.1"
+core-ktx = "1.15.0"
 ksp = "2.0.0-1.0.21"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.2.1"
-espresso-core = "3.6.1"
-lifecycle-runtime-ktx = "2.8.2"
-activity-compose = "1.9.0"
-compose-bom = "2024.06.00"
-orbit-compose = "0.31.0"
-compose-navigation = "2.7.7"
+androidx-test-ext-junit = "1.1.5"
+espresso-core = "3.5.1"
+lifecycle-runtime-ktx = "2.8.7"
+activity-compose = "1.9.3"
+compose-bom = "2024.11.00"
+compose-navigation = "2.8.4"
 hilt = "2.49"
-work-runtime-ktx = "2.9.0"
+work-runtime-ktx = "2.10.0"
 appcompat = "1.7.0"
 com-google-android-material-material = "1.12.0"
-androidx-benchmark = "1.2.4"
-runner = "1.6.1"
-benchmark-junit4 = "1.2.4"
+androidx-benchmark = "1.3.3"
 uiautomator = "2.3.0"
-benchmark-macro-junit4 = "1.2.4"
+benchmark-macro-junit4 = "1.3.3"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
@@ -50,8 +46,8 @@ lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-ru
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie-compose" }
-material-icon-exented = "androidx.compose.material:material-icons-extended:1.6.8"
-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.0-beta04" }
+material-icon-exented = "androidx.compose.material:material-icons-extended:1.7.5"
+ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.5" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -65,7 +61,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 hilt-navigation = "androidx.hilt:hilt-navigation-compose:1.2.0"
 
-firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "33.1.1" }
+firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "33.6.0" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx" }
@@ -79,8 +75,6 @@ google-playservices-auth = { group = "com.google.android.gms", name = "play-serv
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.6.0" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "com-google-android-material-material" }
-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
-benchmark-junit4 = { group = "androidx.benchmark", name = "benchmark-junit4", version.ref = "benchmark-junit4" }
 
 konfetti-compose = "nl.dionsegijn:konfetti-compose:2.0.3"
 uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "uiautomator" }
