--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ kotlinx-serialization-json = "1.7.3"
 lottie-compose = "6.1.0"
 kotlin = "2.1.10"
 core-ktx = "1.16.0"
-ksp = "2.0.0-1.0.21"
+ksp = "2.1.10-1.0.31"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
 espresso-core = "3.6.1"
@@ -46,8 +46,8 @@ lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-ru
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie-compose" }
-material-icon-exented = "androidx.compose.material:material-icons-extended:1.7.5"
-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.5" }
+material-icon-exented = "androidx.compose.material:material-icons-extended:1.7.8"
+ui = { group = "androidx.compose.ui", name = "ui", version = "1.8.1" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -61,7 +61,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 hilt-navigation = "androidx.hilt:hilt-navigation-compose:1.2.0"
 
-firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "33.6.0" }
+firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "33.13.0" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx" }
@@ -70,9 +70,9 @@ firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging
 firebase-remoteconfig = { group = "com.google.firebase", name = "firebase-config-ktx" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
 
-google-playservices-auth = { group = "com.google.android.gms", name = "play-services-auth", version = "21.2.0" }
+google-playservices-auth = { group = "com.google.android.gms", name = "play-services-auth", version = "21.3.0" }
 
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.6.0" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.7.0" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "com-google-android-material-material" }
 
@@ -87,8 +87,8 @@ org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.re
 com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 com-google-gms-google-services = { id = "com.google.gms.google-services", version = "4.4.2" }
-com-google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version = "3.0.2" }
-org-jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "2.0.0" }
+com-google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version = "3.0.3" }
+org-jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref="kotlin" }
 com-android-library = { id = "com.android.library", version.ref = "agp" }
 androidx-benchmark = { id = "androidx.benchmark", version.ref = "androidx-benchmark" }
 androidTest = { id = "com.android.test", version.ref = "agp" }
